# frvt

1N/frvtPlainCWrapper/: CMakeLists.txt  README.md  frvtWrapper.cpp  frvtWrapper.h  testFRVTPlainCWrapper.cpp  testFRVTWrapper.cpp
1N/frvtPythonWrapper/: frvtPythonWrapper.py
