project(frvtPlainCWrapper LANGUAGES CXX)
cmake_minimum_required(VERSION 3.0)
set( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-undefined" )
add_definitions(-std=c++14 -Wall -m64 -O3 -fPIC)
add_library(frvtPlainCWrapper SHARED frvtWrapper.cpp frvtWrapper.h)
target_link_libraries(frvtPlainCWrapper PUBLIC dl)
target_include_directories(frvtPlainCWrapper PUBLIC ../../../)
target_include_directories(frvtPlainCWrapper PUBLIC ../../common/src/include)
add_executable(testFRVTPlainCWrapper testFRVTPlainCWrapper.cpp)
target_include_directories(testFRVTPlainCWrapper PUBLIC ../)
target_include_directories(testFRVTPlainCWrapper PUBLIC ../common/src/include)
target_link_libraries(testFRVTPlainCWrapper PUBLIC dl frvtPlainCWrapper)